TheFit/k8s/ingress.yml
# ingress-controller 설처 명령어
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.8.1/deploy/static/provider/aws/deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thefit-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  tls:
    - hosts:
        - "server.hiimjaeyoung.shop"
      secretName: thefit-com-tls
  rules:
    - host: server.hiimjaeyoung.shop
      http:
        paths:
          - path: /(.*) #모든 url 요청을 nginx-service로 라우팅
            pathType: Prefix
            backend:
              service:
                name: thefit-backend-service
                port:
                  number: 80
